objects/Branch__c.object
<CustomObject>
    <description>Branches and their addresses.</description>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DO_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DO Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DS Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Design Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Foremen__c</fullName>
        <label>Foremen</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ben Ramos*</fullName>
                </value>
                <value>
                    <fullName>Bret Easthouse</fullName>
                </value>
                <value>
                    <fullName>Bryan Patterson</fullName>
                </value>
                <value>
                    <fullName>Charlie Humes</fullName>
                </value>
                <value>
                    <fullName>Cliff Powell*</fullName>
                </value>
                <value>
                    <fullName>Eric Peterson</fullName>
                </value>
                <value>
                    <fullName>Halston Rowe</fullName>
                </value>
                <value>
                    <fullName>Izzy Porrata</fullName>
                </value>
                <value>
                    <fullName>Jacob Portillo</fullName>
                </value>
                <value>
                    <fullName>James Donalson</fullName>
                </value>
                <value>
                    <fullName>James Rudolph</fullName>
                </value>
                <value>
                    <fullName>Jason Linder</fullName>
                </value>
                <value>
                    <fullName>Jeremy Taylor</fullName>
                </value>
                <value>
                    <fullName>Joe Busch</fullName>
                </value>
                <value>
                    <fullName>Jon Bush</fullName>
                </value>
                <value>
                    <fullName>Jon Innes</fullName>
                </value>
                <value>
                    <fullName>Jose Gallegos</fullName>
                </value>
                <value>
                    <fullName>Kyle Blickley</fullName>
                </value>
                <value>
                    <fullName>Loren O’Hara</fullName>
                </value>
                <value>
                    <fullName>Mike Middleton</fullName>
                </value>
                <value>
                    <fullName>Nick Moore</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Peter MacDougall</fullName>
                </value>
                <value>
                    <fullName>Simon Wood</fullName>
                </value>
                <value>
                    <fullName>Stuart Diehl</fullName>
                </value>
                <value>
                    <fullName>Ryan Albert</fullName>
                </value>
                <value>
                    <fullName>Adam Sullivan</fullName>
                </value>
                <value>
                    <fullName>Jason Kiwak</fullName>
                </value>
                <value>
                    <fullName>Chris Sabin</fullName>
                </value>
                <value>
                    <fullName>Dan Stafford</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPS_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OPS Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PV_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PV Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SV_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Job number suffix for jobs of type Service.</description>
        <label>SV Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Branch</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Number__c</columns>
        <columns>OPS_Manager__c</columns>
        <columns>Design_Manager__c</columns>
        <columns>Foremen__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Numbers</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Number__c</columns>
        <columns>PV_Number__c</columns>
        <columns>DO_Number__c</columns>
        <columns>DS_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All - Numbers</label>
    </listViews>
    <nameField>
        <label>Branch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>